client/src/app/(music)/_/components/MusicList/styles.module.scss
@use "@/sass/abstracts/colors.scss" as *;
@use "@/sass/constants/dimensions.scss" as *;

%inputContainer {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border-radius: 10px;
}

%runTrack {
  height: 5px;
  background: rgb(255 255 255 / 10.4%);
  border-radius: 16px;
}

%thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #000;
  border-radius: 50%;
}

// .musicListContainer {
//   overflow: auto;
//   width: 100%;
//   height: 100%;

//   @media screen and (width <= 425px) {
//     height: calc(100dvh - 140px);
//   }
// }

.musicList {
  list-style: none;
  color: $text;
  height: 100%;
  // height: calc(100% - $page-title-height);
  overflow-y: auto;

  &::-webkit-scrollbar-track {
    background: transparent;
  }

  &::-webkit-scrollbar-thumb {
    background-color: $accent;
    border-radius: 10px;
  }

  &::-webkit-scrollbar {
    width: 4px;
  }

  .musicListItem {
    background-color: $widget-bg;
    font-size: 0.9rem;
    padding: 0.6rem 1.4rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 1rem;
    margin-bottom: 10px;
    border-radius: 1rem;

    @media screen and (width <= 576px) {
      padding: 0.5rem;
      font-size: 0.9rem;
    }

    @media screen and (width <= 425px) {
      padding: 0.4rem;
      font-size: 0.8rem;
    }

    .leftSection {
      display: flex;
      align-items: center;
      gap: 1rem;
      max-width: 80%;

      .imageBlock {
        position: relative;
        width: 40px;
        height: 40px;

        .playing {
          opacity: 1;
          cursor: pointer;
        }

        .notPlaying {
          opacity: 0;
          transition: opacity 0.15s ease-out;
          cursor: pointer;

          &:hover {
            display: block;
            opacity: 1;
          }
        }

        & svg {
          position: absolute;
          top: 50%;
          left: 50%;
          transform: translate(-50%, -50%);
          transition: opacity 0.15s ease-out;
        }

        & [datatype="loadingCircle"] {
          position: absolute;
          top: 30%;
          left: 30%;
          transform: translate(-50%, -50%);
        }

        & > img {
          -o-object-fit: cover;
          object-fit: cover;
          border-radius: 5px;
          -webkit-user-select: none;
          -moz-user-select: none;
          -ms-user-select: none;
          user-select: none;
        }
      }

      .title {
        overflow: hidden;
        text-overflow: ellipsis;
        display: -webkit-box;
        -webkit-line-clamp: 2; /* number of lines to show */
        line-clamp: 2;
        -webkit-box-orient: vertical;
      }
    }

    .rightSection {
      display: flex;
      align-items: center;
      gap: 1rem;

      & svg {
        cursor: pointer;

        path {
          transition: stroke 0.15s ease;
        }

        &:hover path {
          stroke: $accent;
        }
      }

      .added {
        -webkit-user-select: none;
        -moz-user-select: none;
        -ms-user-select: none;
        user-select: none;
        cursor: default;
        fill: $accent;

        path {
          stroke: $widget-bg;
        }
      }
    }
  }
}

.musicListMenuProps {
  color: $text;
  text-align: center;
  cursor: pointer;
  padding: 0.5rem;
  width: 100%;
  width: 150px;
  border-radius: 10px;
  transition: background-color 0.15s linear;

  &:hover {
    background-color: $bg-alt-hover;
  }
}

.addToAlbumsContainer {
  border-top: 1px solid rgba(128, 128, 128, 0.397);
  border-bottom: 1px solid rgba(128, 128, 128, 0.397);
  max-height: 0;
  overflow-y: auto;
  scroll-behavior: smooth;

  &::-webkit-scrollbar-track {
    background: transparent;
  }

  &::-webkit-scrollbar-thumb {
    background-color: $accent;
    border-radius: 10px;
  }

  &::-webkit-scrollbar {
    width: 1px;
  }

  .addToAlbums {
    @extend .musicListMenuProps;
    text-align: left;
    font-size: 0.9rem;
    display: flex;
    align-items: center;
    gap: 0.5rem;

    .addToAlbumsTitle {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      display: -webkit-box;
      -webkit-line-clamp: 1; /* number of lines to show */
      line-clamp: 1;
      -webkit-box-orient: vertical;
    }

    &:hover {
      background-color: $widget-bg;
    }
  }
}

.addToAlbumsContainerVisible {
  @extend .addToAlbumsContainer;
  max-height: 120px;
}

.deleteSong {
  @extend .musicListMenuProps;

  color: #faa0a0;
}

.previewContainer {
  background-color: $widget-bg;
  z-index: -1;
  display: flex;
  align-items: center;
  border-bottom-left-radius: 1rem;
  border-bottom-right-radius: 1rem;
  margin-bottom: 10px;
  padding: 0 5%;
  margin-top: -1px;

  .trackBlock {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 0.5rem;

    .previewHandlers {
      & svg {
        cursor: pointer;
        width: 15px;
        height: 15px;
      }
    }

    .inputs {
      width: 70%;
      position: relative;
      height: 4px;
      display: flex;

      .trackSeek {
        @extend %inputContainer;

        position: absolute;
        cursor: pointer;
        width: 100%;
        height: 5px;
        outline: none;
        z-index: 1;

        &::-webkit-slider-runnable-track {
          @extend %runTrack;
        }

        &::-webkit-slider-thumb {
          @extend %thumb;

          margin-top: -1px;
          height: 0;
          width: 0;
        }
      }

      .buffer {
        -webkit-appearance: none;
        -moz-appearance: none;
        appearance: none;
        background: transparent;
        border-radius: 10px;
        width: 100%;
        position: absolute;
        opacity: 0.3;

        &::-webkit-slider-runnable-track {
          height: 5px;
          background: rgb(255 255 255 / 10.4%);
          border-radius: 16px;
        }

        &::-webkit-slider-thumb {
          -webkit-appearance: none;
          appearance: none;
        }
      }
    }
  }

  .sound {
    width: 20%;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 5px;

    @media screen and (width <= 576px) {
      width: 30%;
    }

    .volume {
      @extend %inputContainer;

      cursor: pointer;
      width: 100%;
      height: 5px;
      outline: none;

      &::-webkit-slider-runnable-track {
        @extend %runTrack;
      }

      &::-webkit-slider-thumb {
        @extend %thumb;

        margin-top: -2px;
        height: 0;
        width: 0;
      }
    }
  }
}

